--- a/homepage/styles/styles.css
+++ b/homepage/styles/styles.css
@@ -1,9 +1,40 @@
 body {
-    background-color: grey;
+    background-color: white;
 }
-
-a {
+nav {
+    display: flex;
+    justify-content: center;
+}
+nav a {
         padding: 20px;
-        color: white;
+        color: black;
         font-size: 1.4em;
+        text-decoration: none;
+        text-align: center;
+        margin: 0 auto;
+}
+nav a:hover {
+    color:blue;
+}
+main h1 {
+    text-align: center;
+}
+img {
+    display: block;
+    margin: 0 auto;
+}
+footer {
+    text-align: center;
+}
+#content {
+    max-width: 1500px;
+}
+footer {
+    padding: 5%;
+}
+p {
+    text-align: center;
+}
+header{
+    background-color: grey;
 }
