--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -8,7 +8,7 @@
 
 body {
     background-color: #fcfbfb; 
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif, monospace;
     color: #333333;
 }
 
@@ -148,4 +148,49 @@ footer {
 
 footer a {
     color: #999;
+}
+
+/* Media Query for Responsive Design */
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
