--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -67,12 +67,14 @@ nav a:hover {
 #hero-msg h1 {
     font-size: 3em;
     color: #ffffff;
+    text-align: center;
 }
 
 #hero-msg h4 {
     font-size: 1.5em;
     margin-bottom: 20px;
     color: #ffffff;
+    text-align: center;
 }
 
 .button-box {
@@ -98,6 +100,7 @@ main {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     margin-top: 40px;
+    text-align: center;
 }
 
 section {
@@ -106,6 +109,7 @@ section {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    text-align: center;
 }
 
 .card-img {
@@ -150,7 +154,6 @@ footer a {
     color: #999;
 }
 
-/* Media Query for Responsive Design */
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
