--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -197,3 +197,34 @@ footer a {
         margin-top: 25px;
     }
 }
+
+.main-content .item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.main-content .item .image {
+    flex: 0 0 20%;
+    margin-right: 20px;
+}
+
+.main-content .item .text {
+    flex: 1;
+}
+
+/* For the middle item to be flipped */
+.item.flip .image {
+    order: 2; /* Move the image to the right */
+    margin-left: 20px; /* Reset left margin */
+    margin-right: 0; /* Remove right margin */
+}
+
+.item.flip .text {
+    order: 1; /* Move the text to the left */
+    text-align: right; /* Align text to the right */
+}
+.main-content .item .Salmon img {
+    flex: 0 0 100%; /* Change the width of the Salmon River image */
+    margin-right: 20px; /* Adjust margin as needed */
+}
