--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -205,10 +205,12 @@ footer a {
 }
 
 .main-content .item .image {
-    flex: 0 0 20%;
+    flex: 0 0 45%;
     margin-right: 20px;
 }
-
+.main-content .item .image img {
+    width: 80%;
+}
 .main-content .item .text {
     flex: 1;
 }
@@ -222,9 +224,10 @@ footer a {
 
 .item.flip .text {
     order: 1; /* Move the text to the left */
-    text-align: right; /* Align text to the right */
+    text-align: center; /* Align text to the right */
 }
 .main-content .item .Salmon img {
     flex: 0 0 100%; /* Change the width of the Salmon River image */
     margin-right: 20px; /* Adjust margin as needed */
 }
+
