--- a/personal/styles/index.css
+++ b/personal/styles/index.css
@@ -25,7 +25,7 @@ header {
 
 nav {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
     align-items: flex-start; 
     padding: 20px;
     margin-top: 3px;
