--- a/personal/styles/shop.css
+++ b/personal/styles/shop.css
@@ -35,7 +35,7 @@ header {
 
 nav {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
     align-items: flex-start; 
     padding: 20px;
     margin-top: 3px;
