--- a/personal/styles/index.css
+++ b/personal/styles/index.css
@@ -79,6 +79,7 @@ main.home-grid img {
     display: block;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
 }
 
 section.msg {
