--- a/personal/styles/shop.css
+++ b/personal/styles/shop.css
@@ -101,15 +101,16 @@ footer {
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;   
-    padding: 200px; 
+    grid-template-columns: 1fr 1fr;   
+    padding: 200px 0;
+  
 }
 
 .product {
     width: 100%; 
-    margin-bottom: 20px;
+    /*margin-bottom: 20px;
     padding-right: 100px;
-    padding-left: 50px;
+    padding-left: 50px;*/
 }
 
 .details {
@@ -122,25 +123,25 @@ footer {
 }
 
 .image img {
-    max-width: 300px;
-    max-height: 160px;
+    max-width: 400px;
+    max-height: 260px;
 }
 
 .title {
     font-weight: bold;
-   
     display: inline-block;
 }
 
 .price {
     color: green;
-  
     display: inline-block;
+    margin-left: 50px;
 }
 
 .description {
-    margin-top: 5px;
-    text-align: left;
+    margin: 5px auto;
+    text-align: center;
+    width: 50%;
 }
 
 .contact {
@@ -149,3 +150,56 @@ footer {
     background-color: lightgrey;
     text-align: center; 
 }
+
+body {
+    text-align: center;
+  }
+  
+  form {
+    display: inline-block;
+    padding: 2em;
+    margin-left: -40px;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  form li + li {
+    margin-top: 1em;
+  }
+  
+  label {
+    display: inline-block;
+    min-width: 90px;
+    text-align: right;
+  }
+  
+  input,
+  textarea {
+    font: 1em sans-serif;
+    width: 300px;
+    box-sizing: border-box;
+    border: 1px solid #999;
+  }
+  
+  input:focus,
+  textarea:focus {
+    border-color: #000;
+  }
+  
+  textarea {
+    vertical-align: top;
+    height: 5em;
+  }
+  
+  .button {
+    padding-left: 90px; 
+  }
+  
+  button {
+    margin-left: 0.5em;
+  }
+  
